--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vercel:build": "npm run build"
   },
   "dependencies": {
+    "@cosmjs/cosmwasm-stargate": "^0.32.0",
+    "@cosmjs/stargate": "^0.32.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.9",
@@ -61,6 +63,7 @@
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.0",
     "terser": "^5.44.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
   }
